@@ -2147,6 +2147,20 @@ DT = data.table(a=1:3,b=1:6,c=7:12, key="a")
 test(769, DT[,.BY[[1]]==a,by=a], data.table(a=1:3,V1=TRUE,key="a"))
 test(770, DT[J(2:3),.BY[[1]]==b], data.table(a=INT(2,2,3,3),V1=c(TRUE,FALSE),key="a"))
 
+# A data.table RHS of := caused a crash, #2311.
+a = data.table(first=1:6, third=c(1,1,1,3,3,4), key="first")
+b = data.table(first=c(3,4,4,5,6,7,8), second=1:7, key="first")
+test(771, b[,third:=a[b,third]], warning="Supplied 2 items.*to 7.*recycled leaving remainder of 1 item")
+suppressWarnings(test(772, copy(b)[,third:=a[b,third]], b[,third:=as.list(a[b,third])]))
+test(773, b[4,third[[1]]], c(1,3,3,3,4,NA,NA))
+test(774, b[,third:=a[b,third,mult="first"]], data.table(first=c(3,4,4,5,6,7,8), second=1:7, third=c(1,3,3,3,4,NA,NA), key="first"))  # This plonk replaces b with what was likely intended.
+
+# That names are dropped. (Names on the column vectors don't display. They increase size and aren't much use.)
+DT = data.table(a=1:3,b=LETTERS[1:3])
+map = c("A"="Foo",B="Bar",C="Baz")
+DT[,b:=map[b]]
+test(775, names(DT$b), NULL)
+
 
 # TO DO: add examples of multiple LHS (name and position) and multiple RHS to example(":=")
 
